# GT-EHL

./: CMakeLists.txt  LICENSE  README.md  benchmark_EHL.sh  build_grid_based_hub_labelling.cpp  build_visibility_graph.cpp  clean_index.sh  construct_hl.cpp  hub_label_converter.cpp  preprocessing_EHL.sh  testEHL.cpp
dataset/: bgmaps_cleaned.txt  da2_cleaned.txt  dao_cleaned.txt  sc1_cleaned.txt
dataset/merged-mesh/bgmaps/: AR0011SR-merged.mesh  AR0012SR-merged.mesh  AR0013SR-merged.mesh  AR0014SR-merged.mesh  AR0015SR-merged.mesh  AR0016SR-merged.mesh  AR0017SR-merged.mesh  AR0018SR-merged.mesh  AR0020SR-merged.mesh  AR0041SR-merged.mesh  AR0042SR-merged.mesh  AR0043SR-merged.mesh  AR0044SR-merged.mesh  AR0045SR-merged.mesh  AR0046SR-merged.mesh  AR0070SR-merged.mesh  AR0071SR-merged.mesh  AR0072SR-merged.mesh  AR0201SR-merged.mesh  AR0202SR-merged.mesh  AR0203SR-merged.mesh  AR0204SR-merged.mesh  AR0205SR-merged.mesh  AR0206SR-merged.mesh  AR0300SR-merged.mesh  AR0301SR-merged.mesh  AR0302SR-merged.mesh  AR0303SR-merged.mesh  AR0304SR-merged.mesh  AR0305SR-merged.mesh  AR0306SR-merged.mesh  AR0307SR-merged.mesh  AR0308SR-merged.mesh  AR0309SR-merged.mesh  AR0310SR-merged.mesh  AR0314SR-merged.mesh  AR0316SR-merged.mesh  AR0317SR-merged.mesh  AR0331SR-merged.mesh  AR0400SR-merged.mesh  (+34 more)
dataset/merged-mesh/da2/: ca_cave-merged.mesh  ca_cavern1_haunted-merged.mesh  ca_caverns1-merged.mesh  ca_caverns1_mines-merged.mesh  ca_caverns2-merged.mesh  ca_caverns2prc-merged.mesh  dr_0_deeproads-merged.mesh  dr_dungeon-merged.mesh  dr_primevalentrance-merged.mesh  dr_primevaltomb-merged.mesh  dr_slavers-merged.mesh  ht_0_hightown-merged.mesh  ht_0_hightown_a2-merged.mesh  ht_0_hightown_a3-merged.mesh  ht_0_hightown_n-merged.mesh  ht_bartrand_n-merged.mesh  ht_brothel_n-merged.mesh  ht_chantry-merged.mesh  ht_chantry_n-merged.mesh  ht_keep-merged.mesh  ht_keep_n-merged.mesh  ht_mansion2-merged.mesh  ht_mansion2b-merged.mesh  ht_mansion_n-merged.mesh  ht_playershouse_n-merged.mesh  ht_store-merged.mesh  lt_0_lowtown-merged.mesh  lt_0_lowtown_a2-merged.mesh  lt_0_lowtown_a2_n-merged.mesh  lt_0_lowtown_a2_n_c-merged.mesh  lt_0_lowtown_a3_n_c-merged.mesh  lt_0_lowtown_docks_a3-merged.mesh  lt_0_lowtown_docks_n-merged.mesh  lt_0_lowtown_n-merged.mesh  lt_backalley_g-merged.mesh  lt_darktown-merged.mesh  lt_foundry_n-merged.mesh  lt_gallowscourtyard-merged.mesh  lt_gallowscourtyard_n-merged.mesh  lt_gallowsprison_n-merged.mesh  (+23 more)
dataset/merged-mesh/dao/: arena2-merged.mesh  brc000d-merged.mesh  brc100d-merged.mesh  brc101d-merged.mesh  brc200d-merged.mesh  brc201d-merged.mesh  brc202d-merged.mesh  brc203d-merged.mesh  brc204d-merged.mesh  brc300d-merged.mesh  brc501d-merged.mesh  brc502d-merged.mesh  brc503d-merged.mesh  brc504d-merged.mesh  brc505d-merged.mesh  brc997d-merged.mesh  brc999d-merged.mesh  combat-merged.mesh  combat2-merged.mesh  den000d-merged.mesh  den001d-merged.mesh  (+134 more)
helpers/: cfg.cpp  cfg.h  constants.h  cpool.h  geometry.cpp  geometry.h  helper.h  id_queue.h  rtree.h  scenario.cpp  scenario.h  timer.cpp  timer.h  timestamp_flag.h
hub_label_structs/: coverage_ordering_path.h  graph.h  graph_search.h  labels.h  paras.h  time_util.h
irtree/: IRStarTree.cpp  IRStarTree.h  IRStarTreeUtil.cpp  IRStarTreeUtil.h  KwData.cpp  KwData.h  irUtil2D.h
knn/: IERPolyanya.cpp  IERPolyanya.h  IRTreeEhl.h  RtreeEhl.h  build_ehl_knn.cpp  build_ehl_rtree.cpp  ehl_tree.h  generate_knn_dataset.sh  intervaHeuristic.cpp  intervaHeuristic.h  keyword_extraction.py  knn_dataset_generator.cpp
search/: dijkstra.h  ebhl_query_v2.h  expansion.cpp  expansion.h  searchinstance.cpp  searchinstance.h  visibleAreaSearchInstance.cpp  visibleAreaSearchInstance.h  visibleSearchInstance.cpp  visibleSearchInstance.h
structs/: binary_search.h  consts.h  ebhl.h  edge.h  graph.cpp  graph.h  grid_label.h  mesh.cpp  mesh.h  point.h  polygon.h  range.h  searchnode.h  successor.h  vec_io.h  vertex.h
(+76 files in other folders)
